fix(ui): Change the text of the tag item into something more readable.

--- a/src/main/resources/public/assets/app.css
+++ b/src/main/resources/public/assets/app.css
@@ -1,3 +1,7 @@
 .pointer {
     cursor: pointer;
 }
+
+ti-tag-item span {
+    color: #337ab7;
+}
